QA-4929: removed InstrumentationRuntimeFactory; fixed asserts; changed SkuImpl, ProductImpl; clean code